fix: on mobile

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -73,6 +73,7 @@
 @media screen and (max-width: 768px) {
   .container {
     border: none;
+    display: none;
   }
 
   .logo {
