--- a/components/Main/Main.module.scss
+++ b/components/Main/Main.module.scss
@@ -118,6 +118,6 @@
 
   .wrapper {
     left: calc(8vw - 10px);
-    bottom: calc(6vw - 10px);
+    bottom: calc(9vw - 10px);
   }
 }
